# appalachia

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bacon.toml
src/: data.rs  events.rs  main.rs  respond.rs  rps.rs
src/command/: admin.rs  flip.rs  mod.rs  quote.rs  random_user.rs  roll.rs  rps.rs
src/command/admin/: autorole.rs  mod.rs  quote_channel.rs
src/command/rps/: leaderboard.rs  mod.rs  model.rs
src/data/: config.rs  guild_data.rs  mod.rs  rps_leaderboard.rs
