[package]
name = "appalachia-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
poise = "0.6.1"
rand = "0.8.5"
saikoro = "1.1.1"
serde = "1.0.201"
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1.0.60"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.12"
