[package]
name = "appalachia"
version = "0.2.4"
authors = ["jolkert"]
edition = "2021"
description = "a discord bot for personal use"
homepage = "https://jolkert.dev/appalachia"
repository = "https://github.com/jolkert/appalachia"
license = "MIT OR Apache-2.0"
exclude = ["bacon.toml", ".vscode/", "CHANGELOG.md"]
categories = ["command-line-utilities"]
keywords = ["discord", "bot", "appalachia", "rock-paper-scissors", "dice"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
palette = "0.7.6"
poise = "0.6.1"
rand = "0.8.5"
saikoro = { version = "1.2.2", features = ["stats"] }
serde = "1.0.201"
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1.0.60"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.12"
unidecode = "0.3.0"
